--- a/docs/02_layanan_cloud/02.md
+++ b/docs/02_layanan_cloud/02.md
@@ -92,6 +92,8 @@ Diagram berikut memberikan gambaran tingkat tinggi dari layanan.
 
 ### 4. Storage Gateway
 Storage Gateway adalah gateway penyimpanan cloud yang memungkinkan Anda menghubungkan aplikasi lokal dengan Oracle Cloud Infrastructure. Aplikasi yang dapat menulis data ke target NFS juga dapat menulis data ke Oracle Cloud Infrastructure Object Storage, tanpa memerlukan modifikasi aplikasi untuk mengambil REST API.
+![Screenshot DevOps Oracle](img/123-1.png)
+
 #### Konsep Storage Gateway :
 1. FILE SYSTEM
 Sistem file Storage Gateway pada host lokal memetakan file dan direktorinya ke objek dengan nama yang sama di bucket Penyimpanan Objek Infrastruktur Cloud Oracle yang sesuai.
