--- a/docs/03_create_vm/03.md
+++ b/docs/03_create_vm/03.md
@@ -2,13 +2,62 @@
 
 ## Tujuan Pembelajaran
 
-1. ...
-2. ...
+1. Mengetahui layanan Oracle Cloud Infrastructure Compute
+2. Mampu membuat Virtual Machine (VM) di layanan compute Oracle Cloud
 
 ## Hasil Praktikum
 
-Berikut ini adalah bukti telah berhasil login ke halaman beranda akun oracle cloud.
+Berikut ini adalah bukti telah berhasil membuat VM Ware pada Oracle Cloud.
 
-![Screenshot Dashboard Oracle](img/dashboard_oracle.png)
+1.  Setelah berhasil login pada beranda pilih menu compute kemudia klik instance.
+![Screenshot Dashboard Oracle](img/1.png)
 
-[contoh link](../../src/01_pengantar/hello.js)
+2. Lalu klik **Create Instance** unutuk membuat VM baru.
+![Screenshot Dashboard Oracle](img/Screenshot_1.png)
+
+3. Beri nama VM yang kita buat.
+![Screenshot Dashboard Oracle](img/Screenshot_18.png)
+
+4. Lakukan edit pada **image and shape** kemudian klik change image.
+![Screenshot Dashboard Oracle](img/Screenshot_4.png)
+
+5. Pilih **Canonical Ubuntu versi 20.04**, lalu klik Select image.
+
+![Screenshot Dashboard Oracle](img/Screenshot_5.png)
+
+6. Pada tahap ini jangan lupa wajib menyimpan **SSH Keys** dengan klik Save Private Key untuk mengunduh private key milik kita agar nanti VM bisa diakses.
+
+![Screenshot Dashboard Oracle](img/Screenshot_6.png)
+
+7. Tahap terakhir klik create untuk membuat VM Ware.
+
+![Screenshot Dashboard Oracle](img/Screenshot_9.png)
+
+8. Tunggu proses pembuatan VM Ware berhasil jika selesai pada bagian compute 100%.
+
+![Screenshot Dashboard Oracle](img/Screenshot_19.png)
+
+
+## Tugas 
+### Carilah cara agar Anda dapat melakukan SSH ke VM yang baru dibuat berdasarkan praktikum tersebut!
+
+1. Buka **PUTTYYGen** kemudian klik load.
+![Screenshot Dashboard Oracle](img/Screenshot_8.png)
+
+2. Lalu klik save private key untuk export private key ke direktori lokal kita.
+![Screenshot Dashboard Oracle](img/Screenshot_12.png)
+
+3. Kemudian buka aplikasi Putty klik Host Name masukan ip public.
+![Screenshot Dashboard Oracle](img/Screenshot_13.png)
+
+4. Pindah ke category pilih SSH expand ke AUTH kemudian import file private key yang tadi kita export. 
+![Screenshot Dashboard Oracle](img/Screenshot_14.png)
+
+5. Berikutnya klik open untuk lanjut akses VM Ware.
+![Screenshot Dashboard Oracle](img/Screenshot_15.png)
+
+
+6. Berhasil melakukan login ke VM Ware dengan Terminal Putty.
+![Screenshot Dashboard Oracle](img/Screenshot_16.png)
+
+
