Pertemuan 4 - setup PHP

--- a/docs/04_setup_VCN/04.md
+++ b/docs/04_setup_VCN/04.md
@@ -65,3 +65,24 @@ localhost atau buka browser di komputer/laptop pribadi Anda dan arahkan ke IP pu
 ![Screenshot Dashboard Oracle](img/Screenshot_12.png)
 
 
+## Praktikum 3: Setup PHP di VM
+
+1. Install PHP ketika command pada cmd.
+
+![Screenshot Dashboard Oracle](img/Screenshot_14.png)
+
+2. Cek apakah php sudah terinstall kemudian restart apache.
+
+![Screenshot Dashboard Oracle](img/Screenshot_15.png)
+
+3. Buat file dengan nama info.php.
+
+![Screenshot Dashboard Oracle](img/Screenshot_17.png)
+
+4. Ketikan sintak php pada file info.php.
+
+![Screenshot Dashboard Oracle](img/Screenshot_18.png)
+
+5. Tahap terakhir kunjungi pada browser IpPublic/info.php untuk mengecek file info.php apa sudah sukses.
+
+![Screenshot Dashboard Oracle](img/Screenshot_19.png)
